--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <style>
+        img {
+            max-height: 500px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -14,6 +19,10 @@
             <a href="/pages/resume.html">Resume</a>
         </div>
     </header>
-
+    <div class="images">
+        <img src="/images/pic1.jpg" alt="">
+        <img src="/images/pic2.jpg" alt="">
+        <img src="/images/pic3.jpg" alt="">
+    </div>
 </body>
 </html>
