--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -7,16 +7,19 @@
     <style>
         img {
             max-height: 500px;
+            padding: 5px;
         }
     </style>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <header>
-        <p>Martynas Baranskas EIRf-23</p>
+        <div class="comment">Martynas Baranskas EIRf-23</div>
         <div class="nav">
             <a href="/index.html">Home</a>
             <a href="/pages/about.html">About</a>
             <a href="/pages/resume.html">Resume</a>
+            <a href="/pages/portfolio.html">Portfolio</a>
         </div>
     </header>
     <div class="images">
