--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <header>
-        <p>Martynas Baranskas EIRf-23</p>
+        <div class="comment">Martynas Baranskas EIRf-23</div>
         <div class="nav">
+            <a href="/index.html">Home</a>
             <a href="/pages/about.html">About</a>
             <a href="/pages/resume.html">Resume</a>
-            <a href="/pages/Portfolio.html">Portfolio</a>
+            <a href="/pages/portfolio.html">Portfolio</a>
         </div>
     </header>
 
