--- a/pages/resume.html
+++ b/pages/resume.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <header>
-        <p>Martynas Baranskas EIRf-23</p>
+        <div class="comment">Martynas Baranskas EIRf-23</div>
         <div class="nav">
             <a href="/index.html">Home</a>
             <a href="/pages/about.html">About</a>
+            <a href="/pages/resume.html">Resume</a>
             <a href="/pages/portfolio.html">Portfolio</a>
         </div>
     </header>
