--- a/pages/about.html
+++ b/pages/about.html
@@ -14,6 +14,7 @@
             <a href="/pages/about.html">About</a>
             <a href="/pages/resume.html">Resume</a>
             <a href="/pages/portfolio.html">Portfolio</a>
+            <a href="/pages/services.html">Services</a>
         </div>
     </header>
 
