--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -20,6 +20,7 @@
             <a href="/pages/about.html">About</a>
             <a href="/pages/resume.html">Resume</a>
             <a href="/pages/portfolio.html">Portfolio</a>
+            <a href="/pages/services.html">Services</a>
         </div>
     </header>
     <div class="images">
