Added print friendly resume

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -17,6 +17,6 @@
             <a href="/pages/services.html">Services</a>
         </div>
     </header>
-
+    <a href="/pages/print-friendly-resume.html">Print Friendly Page</a>
 </body>
 </html>
