--- a/pages/print-friendly-resume.html
+++ b/pages/print-friendly-resume.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PrintFriendlyResume</title>
-    <link rel="stylesheet" href="/printfriendly.css">
+    <link rel="stylesheet" href="skriptinisLD2/printfriendly.css">
 </head>
 <body>
     <h1>Lorem, ipsum dolor.</h1>
