--- a/pages/resume.html
+++ b/pages/resume.html
@@ -10,13 +10,13 @@
     <header>
         <div class="comment">Martynas Baranskas EIRf-23</div>
         <div class="nav">
-            <a href="/index.html">Home</a>
-            <a href="/pages/about.html">About</a>
-            <a href="/pages/resume.html">Resume</a>
-            <a href="/pages/portfolio.html">Portfolio</a>
-            <a href="/pages/services.html">Services</a>
+            <a href="skriptinisLD2/index.html">Home</a>
+            <a href="skriptinisLD2/pages/about.html">About</a>
+            <a href="skriptinisLD2/pages/resume.html">Resume</a>
+            <a href="skriptinisLD2/pages/portfolio.html">Portfolio</a>
+            <a href="skriptinisLD2/pages/services.html">Services</a>
         </div>
     </header>
-    <a href="/pages/print-friendly-resume.html">Print Friendly Page</a>
+    <a href="skriptinisLD2/pages/print-friendly-resume.html">Print Friendly Page</a>
 </body>
 </html>
