fix github links #2

--- a/pages/services.html
+++ b/pages/services.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
-    <link rel="stylesheet" href="skriptinisLD2/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
         <div class="comment">Martynas Baranskas EIRf-23</div>
         <div class="nav">
-            <a href="skriptinisLD2/index.html">Home</a>
-            <a href="skriptinisLD2/pages/about.html">About</a>
-            <a href="skriptinisLD2/pages/resume.html">Resume</a>
-            <a href="skriptinisLD2/pages/portfolio.html">Portfolio</a>
-            <a href="skriptinisLD2/pages/services.html">Services</a>
+            <a href="./index.html">Home</a>
+            <a href="./pages/about.html">About</a>
+            <a href="./pages/resume.html">Resume</a>
+            <a href="./pages/portfolio.html">Portfolio</a>
+            <a href="./pages/services.html">Services</a>
         </div>
     </header>
     <video width="300" height="500" controls>
-        <source src="skriptinisLD2/images/lobster.mp4" type="video/mp4">
+        <source src="./images/lobster.mp4" type="video/mp4">
     </video>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/kNUUnR0F2tg?si=c9oYscdSutSTmMsk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <audio controls>
-        <source src="skriptinisLD2/images/asmr.mp3" type="audio/mpeg">
+        <source src="./images/asmr.mp3" type="audio/mpeg">
     </audio>
 </body>
 </html>
