--- a/pages/about.html
+++ b/pages/about.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="skriptinisLD2/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
         <div class="comment">Martynas Baranskas EIRf-23</div>
         <div class="nav">
-            <a href="skriptinisLD2/index.html">Home</a>
-            <a href="skriptinisLD2/pages/about.html">About</a>
-            <a href="skriptinisLD2/pages/resume.html">Resume</a>
-            <a href="skriptinisLD2/pages/portfolio.html">Portfolio</a>
-            <a href="skriptinisLD2/pages/services.html">Services</a>
+            <a href="./index.html">Home</a>
+            <a href="./pages/about.html">About</a>
+            <a href="./pages/resume.html">Resume</a>
+            <a href="./pages/portfolio.html">Portfolio</a>
+            <a href="./pages/services.html">Services</a>
         </div>
     </header>
 
