--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -10,23 +10,23 @@
             padding: 5px;
         }
     </style>
-    <link rel="stylesheet" href="skriptinisLD2/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
         <div class="comment">Martynas Baranskas EIRf-23</div>
         <div class="nav">
-            <a href="skriptinisLD2/index.html">Home</a>
-            <a href="skriptinisLD2/pages/about.html">About</a>
-            <a href="skriptinisLD2/pages/resume.html">Resume</a>
-            <a href="skriptinisLD2/pages/portfolio.html">Portfolio</a>
-            <a href="skriptinisLD2/pages/services.html">Services</a>
+            <a href="./index.html">Home</a>
+            <a href="./pages/about.html">About</a>
+            <a href="./pages/resume.html">Resume</a>
+            <a href="./pages/portfolio.html">Portfolio</a>
+            <a href="./pages/services.html">Services</a>
         </div>
     </header>
     <div class="images">
-        <img src="skriptinisLD2/images/pic1.jpg" alt="">
-        <img src="skriptinisLD2/images/pic2.jpg" alt="">
-        <img src="skriptinisLD2/images/pic3.jpg" alt="">
+        <img src="./images/pic1.jpg" alt="">
+        <img src="./images/pic2.jpg" alt="">
+        <img src="./images/pic3.jpg" alt="">
     </div>
 </body>
 </html>
