--- a/pages/resume.html
+++ b/pages/resume.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
         <div class="comment">Martynas Baranskas EIRf-23</div>
         <div class="nav">
-            <a href="skriptinisLD2/index.html">Home</a>
-            <a href="skriptinisLD2/pages/about.html">About</a>
-            <a href="skriptinisLD2/pages/resume.html">Resume</a>
-            <a href="skriptinisLD2/pages/portfolio.html">Portfolio</a>
-            <a href="skriptinisLD2/pages/services.html">Services</a>
+            <a href="./index.html">Home</a>
+            <a href="./pages/about.html">About</a>
+            <a href="./pages/resume.html">Resume</a>
+            <a href="./pages/portfolio.html">Portfolio</a>
+            <a href="./pages/services.html">Services</a>
         </div>
     </header>
-    <a href="skriptinisLD2/pages/print-friendly-resume.html">Print Friendly Page</a>
+    <a href="./pages/print-friendly-resume.html">Print Friendly Page</a>
 </body>
 </html>
