fix style on github pages

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -10,7 +10,7 @@
             padding: 5px;
         }
     </style>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <header>
