--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -17,10 +17,10 @@
         <div class="comment">Martynas Baranskas EIRf-23</div>
         <div class="nav">
             <a href="./index.html">Home</a>
-            <a href="./pages/about.html">About</a>
-            <a href="./pages/resume.html">Resume</a>
-            <a href="./pages/portfolio.html">Portfolio</a>
-            <a href="./pages/services.html">Services</a>
+            <a href="./about.html">About</a>
+            <a href="./resume.html">Resume</a>
+            <a href="./portfolio.html">Portfolio</a>
+            <a href="./services.html">Services</a>
         </div>
     </header>
     <div class="images">
