--- a/pages/resume.html
+++ b/pages/resume.html
@@ -10,7 +10,7 @@
     <header>
         <div class="comment">Martynas Baranskas EIRf-23</div>
         <div class="nav">
-            <a href="/">Home</a>
+            <a href="./index.html">Home</a>
             <a href="./about.html">About</a>
             <a href="./resume.html">Resume</a>
             <a href="./portfolio.html">Portfolio</a>
