--- a/pages/resume.html
+++ b/pages/resume.html
@@ -17,6 +17,6 @@
             <a href="./services.html">Services</a>
         </div>
     </header>
-    <a href="./pages/print-friendly-resume.html">Print Friendly Page</a>
+    <a href="./print-friendly-resume.html">Print Friendly Page</a>
 </body>
 </html>
