--- a/pages/about.html
+++ b/pages/about.html
@@ -17,6 +17,8 @@
             <a href="./services.html">Services</a>
         </div>
     </header>
-
+    <div class="comment">
+        <p>Esu Jonas, studijuoju Vilnius TECH ir gyvenu kinijoje. Laisvalaikiu pardavinėjų žąsis ir uždirbtus pinigus investuoju į dramblius. Turiu telekomunikacijų išsilavinimą, tačiau į bokštus aukštalipio pažymėjimo taip ir neišsilaikau.</p>
+    </div>
 </body>
 </html>
