--- a/pages/index.html
+++ b/pages/index.html
@@ -17,6 +17,6 @@
             <a href="./services.html">Services</a>
         </div>
     </header>
-
+    <p>Sveiki atvykę į mano nekilnojamą interneto turtą! Čia rasite tiek aprašymų apie mano veiklas, tiek apie mano turtus ir veikalus.</p>
 </body>
 </html>
