--- a/pages/print-friendly-resume.html
+++ b/pages/print-friendly-resume.html
@@ -7,9 +7,6 @@
     <link rel="stylesheet" href="skriptinisLD2/printfriendly.css">
 </head>
 <body>
-    <h1>Lorem, ipsum dolor.</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum sunt facilis adipisci, hic excepturi omnis at sit odit ullam consectetur, eligendi id magni, modi officiis numquam sed consequatur molestiae aliquam.</p>
-    <p>Lorem, ipsum.</p>
-    <p>Bla bla bla</p>
+    <p>Turiu labaai daug darbo patirties. Super daug nedarbo patirties. O dar daugiau miegojimo patirties.</p>
 </body>
 </html>
