--- a/pages/resume.html
+++ b/pages/resume.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
+    <style>
+        #printfriendly {
+            bottom: 0;
+        }
+    </style>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -17,6 +22,7 @@
             <a href="./services.html">Services</a>
         </div>
     </header>
-    <a href="./print-friendly-resume.html">Print Friendly Page</a>
+    <p>Turiu labaai daug darbo patirties. Super daug nedarbo patirties. O dar daugiau miegojimo patirties.</p>
+    <a href="./print-friendly-resume.html" id="printfriendly">Print Friendly Page</a>
 </body>
 </html>
