--- a/pages/services.html
+++ b/pages/services.html
@@ -18,11 +18,11 @@
         </div>
     </header>
     <video width="300" height="500" controls>
-        <source src="./images/lobster.mp4" type="video/mp4">
+        <source src="/images/lobster.mp4" type="video/mp4">
     </video>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/kNUUnR0F2tg?si=c9oYscdSutSTmMsk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <audio controls>
-        <source src="./images/asmr.mp3" type="audio/mpeg">
+        <source src="/images/asmr.mp3" type="audio/mpeg">
     </audio>
 </body>
 </html>
