--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -24,9 +24,9 @@
         </div>
     </header>
     <div class="images">
-        <img src="/images/pic1.jpg" alt="">
-        <img src="/images/pic2.jpg" alt="">
-        <img src="/images/pic3.jpg" alt="">
+        <img src="../images/pic1.jpg" alt="">
+        <img src="../images/pic2.jpg" alt="">
+        <img src="../images/pic3.jpg" alt="">
     </div>
 </body>
 </html>
