--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="comment">Martynas Baranskas EIRf-23</div>
+        <div class="comment"><img src="./logo.svg" alt="" id="logo"></div>
         <div class="nav">
             <a href="./index.html">Home</a>
             <a href="./about.html">About</a>
@@ -18,5 +18,13 @@
         </div>
     </header>
     <p>Sveiki atvykę į mano nekilnojamą interneto turtą! Čia rasite tiek aprašymų apie mano veiklas, tiek apie mano turtus ir veikalus.</p>
+    <footer>
+        Martynas Baranskas EIRf-23
+        <br>
+        +370 666 66666
+        <br>
+        <img src="./facebookicon.png" alt="" id="social">
+        <img src="./instagramicon.png" alt="" id="social">
+    </footer>
 </body>
 </html>
