--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="comment">Martynas Baranskas EIRf-23</div>
+        <div class="comment"><img src="./logo.svg" alt="" id="logo"></div>
         <div class="nav">
             <a href="./index.html">Home</a>
             <a href="./about.html">About</a>
@@ -24,5 +24,13 @@
     <audio controls>
         <source src="./asmr.mp3" type="audio/mpeg">
     </audio>
+    <footer>
+        Martynas Baranskas EIRf-23
+        <br>
+        +370 666 66666
+        <br>
+        <img src="./facebookicon.png" alt="" id="social">
+        <img src="./instagramicon.png" alt="" id="social">
+    </footer>
 </body>
 </html>
