--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="comment">Martynas Baranskas EIRf-23</div>
+        <div class="comment"><img src="./logo.svg" alt="" id="logo"></div>
         <div class="nav">
             <a href="./index.html">Home</a>
             <a href="./about.html">About</a>
@@ -20,5 +20,13 @@
     <div class="comment">
         <p>Esu Jonas, studijuoju Vilnius TECH ir gyvenu kinijoje. Laisvalaikiu pardavinėjų žąsis ir uždirbtus pinigus investuoju į dramblius. Turiu telekomunikacijų išsilavinimą, tačiau į bokštus aukštalipio pažymėjimo taip ir neišsilaikau.</p>
     </div>
+    <footer>
+        Martynas Baranskas EIRf-23
+        <br>
+        +370 666 66666
+        <br>
+        <img src="./facebookicon.png" alt="" id="social">
+        <img src="./instagramicon.png" alt="" id="social">
+    </footer>
 </body>
 </html>
