LD11 be papildomos
be papildomos

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skriptinis</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+</head>
+<body>
 </head>
 <body>
     <header>
@@ -18,6 +22,31 @@
         </div>
     </header>
     <p>Sveiki atvykę į mano nekilnojamą interneto turtą! Čia rasite tiek aprašymų apie mano veiklas, tiek apie mano turtus ir veikalus.</p>
+    <math xmlns="http://www.w3.org/1998/Math/MathML" id="formula">
+        <mrow>
+            <msubsup>
+                <mo>&#x222B;</mo>
+                <mi>D</mi>
+                <mo></mo>
+            </msubsup>
+            <mo>(</mo>
+            <mo>&#x2207;</mo>
+            <mo>&#x22C5;</mo>
+            <mi>F</mi>
+            <mo>)</mo>
+            <mi>dV</mi>
+            <mo>=</mo>
+            <msubsup>
+                <mo>&#x222B;</mo>
+                <mo>&#x2202;D</mo>
+                <mi></mi>
+            </msubsup>
+            <mi>F</mi>
+            <mo>&#x22C5;</mo>
+            <mi>n</mi>
+            <mi>dS</mi>
+        </mrow>
+    </math>
     <footer>
         Martynas Baranskas EIRf-23
         <br>
