--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
         </div>
     </header>
     <p>Turiu labaai daug darbo patirties. Super daug nedarbo patirties. O dar daugiau miegojimo patirties.</p>
-    <a href="./print-friendly-resume.html" id="printfriendly">Print Friendly Page</a>
+    <a href="./print-friendly-resume.html" id="printfriendly"><img src="./printer.svg" style="max-width: 20px;" alt="">Print Friendly Page</a>
     <footer>
         Martynas Baranskas EIRf-23
         <br>
