lab11 papildoma uzduotis

--- a/about.html
+++ b/about.html
@@ -20,6 +20,24 @@
     <div class="comment">
         <p>Esu Jonas, studijuoju Vilnius TECH ir gyvenu kinijoje. Laisvalaikiu pardavinėjų žąsis ir uždirbtus pinigus investuoju į dramblius. Turiu telekomunikacijų išsilavinimą, tačiau į bokštus aukštalipio pažymėjimo taip ir neišsilaikau.</p>
     </div>
+    
+    <div id="clock"></div>
+
+    <script>
+        function updateClock() {
+            const now = new Date();
+            let hours = String(now.getHours()).padStart(2, '0');
+            let minutes = String(now.getMinutes()).padStart(2, '0');
+            let seconds = String(now.getSeconds()).padStart(2, '0');
+            const timeString = `${hours}:${minutes}:${seconds}`;
+            
+            document.getElementById('clock').textContent = timeString;
+        }
+
+        setInterval(updateClock, 1000);
+
+        updateClock();
+    </script>
     <footer>
         Martynas Baranskas EIRf-23
         <br>
