--- a/resume.html
+++ b/resume.html
@@ -23,6 +23,7 @@
         </div>
     </header>
     <p>Turiu labaai daug darbo patirties. Super daug nedarbo patirties. O dar daugiau miegojimo patirties.</p>
+    <div id="clock"></div>
     <a href="./print-friendly-resume.html" id="printfriendly"><img src="./printer.svg" style="max-width: 20px;" alt="">Print Friendly Page</a>
     <footer>
         Martynas Baranskas EIRf-23
@@ -32,5 +33,21 @@
         <img src="./facebookicon.png" alt="" id="social">
         <img src="./instagramicon.png" alt="" id="social">
     </footer>
+
+    <script>
+        function updateClock() {
+            const now = new Date();
+            let hours = String(now.getHours()).padStart(2, '0');
+            let minutes = String(now.getMinutes()).padStart(2, '0');
+            let seconds = String(now.getSeconds()).padStart(2, '0');
+            const timeString = `${hours}:${minutes}:${seconds}`;
+            
+            document.getElementById('clock').textContent = timeString;
+        }
+
+        setInterval(updateClock, 1000);
+
+        updateClock();
+    </script>
 </body>
 </html>
